[package]
name = "juice-core"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { workspace = true }
chumsky = { workspace = true }
derive_more = { workspace = true }
in_definite = "1.0.0"
itertools = { workspace = true }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde-tuple-vec-map = "1.0.1"
thousands = "0.2.0"
