[package]
name = "juice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.1.0"
clap = { version = "4.5.1", features = ["derive"] }
common = { package = "juice-common", path = "../common" }
derive_more = "0.99.17"
frontend = { package = "juice-frontend", path = "../frontend" }
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
which = "6.0.0"
