[package]
name = "juice-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { workspace = true }
derive_more = { workspace = true }
juice-core = { path = "../core" }
juice-macros = { path = "../macros" }
lasso = "0.7.2"
num-bigint = "0.4.4"
take_mut = "0.2.2"
