[package]
name = "juice-macros"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "*", features = ["extra-traits"] }
proc-macro2 = "*"
convert_case = "0.6.0"
itertools = { workspace = true }

[dev-dependencies]
ariadne = { workspace = true }
juice-core = { workspace = true }
